tests/compile-fail/interned_static_field_not_salsa_value.rs
#[derive(Clone, Debug, Hash, PartialEq, Eq)]
struct StaticField;

#[salsa::interned]
struct MyInterned<'db> {
    field: StaticField,
}

fn main() {}
