tests/compile-fail/interned_static_field_not_salsa_value.stderr
error[E0277]: the trait bound `StaticField: SalsaValue` is not satisfied
 --> tests/compile-fail/interned_static_field_not_salsa_value.rs:4:1
  |
4 | #[salsa::interned]
  | ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `SalsaValue` is not implemented for `StaticField`
 --> tests/compile-fail/interned_static_field_not_salsa_value.rs:2:1
  |
2 | struct StaticField;
  | ^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `SalsaValue`:
            &'static T
            ()
            (A, B)
            (A, B, C)
            (A, B, C, D)
            (A, B, C, D, E)
            (A, B, C, D, E, F)
            (A, B, C, D, E, F, G)
          and $N others
  = note: required for `(StaticField,)` to implement `SalsaValue`
note: required by a bound in `assert_salsa_value`
 --> tests/compile-fail/interned_static_field_not_salsa_value.rs:4:1
  |
4 | #[salsa::interned]
  | ^^^^^^^^^^^^^^^^^^ required by this bound in `assert_salsa_value`
  = note: this error originates in the macro `salsa::plumbing::setup_interned_struct` which comes from the expansion of the attribute macro `salsa::interned` (in Nightly builds, run with -Z macro-backtrace for more info)
